[Fix][Header] fix another layout on mobile responsive

--- a/src/scss/theme/headers/_header-01.scss
+++ b/src/scss/theme/headers/_header-01.scss
@@ -216,7 +216,7 @@
     background: $primaryColor;
     box-shadow: 0 8px 32px 0 rgba(0,0,0,0.08);
     display: none;
-    height: 88px;
+    height: 4.4rem;
     padding: 0 2.22em;
     width: 100%;
 
